--- a/src/SBMonitor.BlazorApp/Shared/ConnectionSettings.razor
+++ b/src/SBMonitor.BlazorApp/Shared/ConnectionSettings.razor
@@ -1,6 +1,6 @@
 ﻿@inject IHttpClientFactory _clientFactory
 
-<h3>ConnectionSettings</h3>
+<h3 class="h3">ConnectionSettings</h3>
 
 <form>
     <div class="form-group">
