--- a/src/SBMonitor.BlazorApp/Pages/Index.razor
+++ b/src/SBMonitor.BlazorApp/Pages/Index.razor
@@ -2,7 +2,9 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1>Hello, world!</h1>
+</div>
 
 Welcome to your new app.
 
