working hubs, groups and connections

--- a/src/SBMonitor.BlazorApp/Pages/Index.razor
+++ b/src/SBMonitor.BlazorApp/Pages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿@inject IHttpClientFactory _clientFactory
+@page "/"
 
 <PageTitle>Dashboard</PageTitle>
 
@@ -6,7 +7,7 @@
     <h1 class="h2">Dashboard</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group me-2">
-            <Button Color="Color.Primary" Clicked="@ShowAddNewConnectionModal" class="btn btn-sm" >
+            <Button Color="Color.Primary" Clicked="@(e => NewConnectionModal.Show())" class="btn btn-sm">
                 <span data-feather="plus-square"></span>
                 New Connection
             </Button>
@@ -14,18 +15,27 @@
     </div>
 </div>
 
-<Modal @ref="@newConnectionModal">
+<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+    <div class="col">
+        @foreach (var item in Items)
+        {
+            <DashboardItem Connection="item" ApiClient="ApiClient"></DashboardItem>
+        }
+    </div>
+</div>
+
+<Modal @ref="@NewConnectionModal">
     <ModalContent Centered>
         <ModalHeader>
             <ModalTitle>Add New Connection</ModalTitle>
             <CloseButton />
         </ModalHeader>
         <ModalBody>
-            <ConnectionSettings @ref="@connectionSettings"/>
+            <ConnectionSettings @ref="@ConnectionSettings" ApiClient="@_clientFactory.CreateClient("API")" />
         </ModalBody>
         <ModalFooter>
-            <Button Color="Color.Primary" Clicked="@(async e => { await connectionSettings.Connect(); await newConnectionModal.Close(CloseReason.UserClosing); })">Connect</Button>
-            <Button Color="Color.Secondary" Clicked="@(e => newConnectionModal.Close(CloseReason.UserClosing))">Close</Button>
+            <Button Color="Color.Primary" Clicked="@(e => AddNewConnection())">Connect</Button>
+            <Button Color="Color.Secondary" Clicked="@(e => NewConnectionModal.Close(CloseReason.UserClosing))">Close</Button>
         </ModalFooter>
     </ModalContent>
 </Modal>
