--- a/src/SBMonitor.BlazorApp/Shared/ConnectionSettings.razor
+++ b/src/SBMonitor.BlazorApp/Shared/ConnectionSettings.razor
@@ -1,6 +1,4 @@
-﻿@inject IHttpClientFactory _clientFactory
-
-<form>
+﻿<form>
     <div class="form-group">
         <label for="connectionTypeOfBus">Type</label>
         <Select TValue="BusType" id="connectionTypeOfBus" class="form-control" @bind-SelectedValue="TypeOfBus">
