--- a/src/SBMonitor.BlazorApp/Pages/Index.razor
+++ b/src/SBMonitor.BlazorApp/Pages/Index.razor
@@ -39,3 +39,14 @@
         </ModalFooter>
     </ModalContent>
 </Modal>
+
+@*<Modal @ref="@NewConnectionModal">
+    <ModalContent>
+        <ModalHeader>
+            <ModalTitle>Add New Connection</ModalTitle>
+        </ModalHeader>
+        <ModalBody>
+            asd
+        </ModalBody>
+    </ModalContent>
+</Modal>*@
