--- a/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
+++ b/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
@@ -8,6 +8,6 @@
         <p class="mt-3 mb-4">
             <DefaultJsonMessageDisplayer InputMessage="@MessageDetails" />
         </p>
-        <Button class="w-100 btn btn-lg btn-primary">History</Button>
+        <Button class="w-100 btn btn-lg btn-primary">Previous Messages</Button>
     </div>
 </div>
