--- a/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
+++ b/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
@@ -8,10 +8,11 @@
     </button>
     <div class="navbar-nav">
         <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" href="#">Sign out</a>
+            <AccessControl />
         </div>
     </div>
 </header>
+
 
 <div class="container-fluid">
     <div class="row">
