--- a/src/SBMonitor.BlazorApp/_Imports.razor
+++ b/src/SBMonitor.BlazorApp/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using SBMonitor.BlazorApp
 @using SBMonitor.BlazorApp.Shared
-
 @using Blazorise
 @using SBMonitor.Core.Enums
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
