--- a/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
+++ b/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
@@ -1,8 +1,24 @@
-﻿@using System.Text.Json
+﻿@inject IJSRuntime JS
 
 <div class="card mb-4 rounded-3 shadow-sm">
     <div class="card-header py-3">
-        <h4 class="my-0 fw-normal">@Connection.Name</h4>
+        <div class="row">
+            <div class="col-md-10">
+                <h4 class="my-0 fw-normal">@Connection.Name</h4>
+            </div>
+            <div class="col-md-2 float-right">
+                <Dropdown>
+                    <DropdownToggle Color="Color.Primary">
+                        <span data-feather="settings"></span>
+                    </DropdownToggle>
+                    <DropdownMenu>
+                        <DropdownItem Clicked="@(e => ConnectionModal.Show())">Edit</DropdownItem>
+                        <DropdownDivider />
+                        <DropdownItem TextColor="TextColor.Danger">Delete</DropdownItem>
+                    </DropdownMenu>
+                </Dropdown>
+            </div>
+        </div>
     </div>
     <div class="card-body">
         <p class="mt-3 mb-4">
@@ -11,3 +27,11 @@
         <Button class="w-100 btn btn-lg btn-primary">Previous Messages</Button>
     </div>
 </div>
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await JS.InvokeVoidAsync("showIcons");
+        await base.OnAfterRenderAsync(firstRender);
+    }
+}
