--- a/src/SBMonitor.BlazorApp/Shared/ConnectionSettingsModal.razor
+++ b/src/SBMonitor.BlazorApp/Shared/ConnectionSettingsModal.razor
@@ -1,4 +1,6 @@
-﻿<Modal @ref="@ConnectionModal">
+﻿@inject AuthenticationStateProvider GetAuthenticationStateAsync
+
+<Modal @ref="@ConnectionModal">
     <ModalContent Centered>
         <ModalHeader>
             <ModalTitle>Connection Settings</ModalTitle>
