--- a/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
+++ b/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
@@ -1,16 +1,9 @@
 ﻿@inherits LayoutComponentBase
-@inject IJSRuntime JS
+@inject IJSRuntime js
 
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">SB Monitor</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-nav">
-        <div class="nav-item text-nowrap">
-            <AccessControl />
-        </div>
-    </div>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Message Silo</a>
+    <AccessControl />
 </header>
 
 
@@ -23,11 +16,3 @@
         </main>
     </div>
 </div>
-
-@code {
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        await JS.InvokeVoidAsync("showIcons");
-        await base.OnAfterRenderAsync(firstRender);
-    }
-}
