--- a/src/SBMonitor.BlazorApp/Shared/AccessControl.razor
+++ b/src/SBMonitor.BlazorApp/Shared/AccessControl.razor
@@ -4,7 +4,7 @@
 @inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
 
-<div class="navbar-nav">
+<div class="navbar-nav px-3">
     <div class="nav-item text-nowrap">
         <AuthorizeView>
             <Authorized>
@@ -28,8 +28,6 @@
                 </Button>
             </NotAuthorized>
         </AuthorizeView>
-    </div>
-    <div class="nav-item text-nowrap">
     </div>
 </div>
 
