--- a/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
+++ b/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
@@ -1,13 +1,13 @@
 ﻿<div class="card mb-4 rounded-3 shadow-sm">
     <div class="card-header py-3">
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-8">
                 <h4 class="my-0 fw-normal">@Connection.Name</h4>
             </div>
-            <div class="col-md-2 float-right">
+            <div class="col-md-4 float-right">
                 <Dropdown>
-                    <DropdownToggle Color="Color.Primary">
-                        <span data-feather="settings"></span>
+                    <DropdownToggle Color="Color.Info">
+                        Actions
                     </DropdownToggle>
                     <DropdownMenu>
                         @*<DropdownItem Clicked="@(e => ConnectionSettingsModal.Show(Connection))">Edit</DropdownItem>*@
@@ -22,6 +22,5 @@
         <p class="mt-3 mb-4">
             <DefaultJsonMessageDisplayer InputMessage="@MessageDetails" />
         </p>
-        <Button class="w-100 btn btn-lg btn-primary">Previous Messages</Button>
     </div>
 </div>
