--- a/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
+++ b/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
@@ -1,7 +1,10 @@
-﻿<div class="card mb-4 rounded-3 shadow-sm">
+﻿<div class="card mb-4 rounded-3 shadow-sm dashboard-item-card">
     <div class="card-header py-3">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-1">
+                <img src="/images/azureservicebus_logo.png" height="35"/>
+            </div>
+            <div class="col-md-7">
                 <h4 class="my-0 fw-normal">@Connection.Name</h4>
             </div>
             <div class="col-md-4 float-right">
