--- a/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
+++ b/src/SBMonitor.BlazorApp/Shared/MainLayout.razor
@@ -2,7 +2,10 @@
 @inject IJSRuntime js
 
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Message Silo</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">
+        <img src="/images/logo.png" width="25"/>
+        Message Silo
+    </a>
     <AccessControl />
 </header>
 
