--- a/src/SBMonitor.BlazorApp/Pages/Index.razor
+++ b/src/SBMonitor.BlazorApp/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@inject IHttpClientFactory _clientFactory
 @page "/"
 
-<PageTitle>Welcome</PageTitle>
+<PageTitle>Welcome | Message Silo</PageTitle>
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Welcome</h1>
