--- a/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
+++ b/src/SBMonitor.BlazorApp/Shared/DashboardItem.razor
@@ -2,7 +2,7 @@
     <div class="card-header py-3">
         <div class="row">
             <div class="col-md-1">
-                <img src="/images/azureservicebus_logo.png" height="35"/>
+                <img src="/images/azureservicebus_logo.png" height="35" />
             </div>
             <div class="col-md-7">
                 <h4 class="my-0 fw-normal">@Connection.Name</h4>
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="card-body">
+    <div class="card-body @(Pulseing ? "pulse": string.Empty)">
         <Switch TValue="bool" @bind-Checked="IsAdvancedView"></Switch>
         <p class="mt-3 mb-4">
             @if (IsAdvancedView)
