--- a/src/SBMonitor.BlazorApp/wwwroot/css/app.css
+++ b/src/SBMonitor.BlazorApp/wwwroot/css/app.css
@@ -148,3 +148,25 @@
     .dashboard-item-card .card-body {
         overflow:auto;
     }
+
+.pulse {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    animation: pulse 2s;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
