--- a/src/MessageSilo.BlazorApp/_Imports.razor
+++ b/src/MessageSilo.BlazorApp/_Imports.razor
@@ -6,8 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using SBMonitor.BlazorApp
-@using SBMonitor.BlazorApp.Shared
+@using MessageSilo.BlazorApp
+@using MessageSilo.BlazorApp.Shared
 @using Blazorise
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
