some view added back

--- a/src/MessageSilo.BlazorApp/Shared/NavMenu.razor
+++ b/src/MessageSilo.BlazorApp/Shared/NavMenu.razor
@@ -4,9 +4,9 @@
             <div class="position-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/dashboard">
+                        <a class="nav-link active" aria-current="page" href="/dead-letter-correctors">
                             <span data-feather="home"></span>
-                            Dashboard
+                            Dead Letter Correctors
                         </a>
                     </li>
                 </ul>
